* Added new application icon in About window
* Added new application icons to the rest of the application
* Replaced dozens of icons that previously used Wilber's face in icon packs
* Fixed the icon pack previewer in the Preferences menu
* Moved to new wiki site and updated links to https://github.com/glimpse-editor/Glimpse/wiki
* TO BE DETERMINED - Still in development

Overview of Changes in Glimpse 0.1.2 Release 2
==============================================
* Resolved upstream bug that caused the application to crash on GNOME 3.36
* Uplifted GNOME platform version used by Flatpak to 3.36

Overview of Changes in Glimpse 0.1.2
====================================

* Updated translation files so they use the correct program name more often
* Glimpse and GNU I.M.P windows no longer group on same Windows taskbar icon
* Fixed copyright year, versions, and AUTHORS list (now standard practice)
* Moved "Sponsor Contributors" list to this file so they are still preserved
* Moved build/ folder to build-aux/ so that we follow GNOME conventions
* Fixed `make dist` to assist Linux and BSD distribution package maintainers
* Fixed "legacy" UI theme in Snapcraft packages
* Reinstated the "Color" icon theme
* Reinstated the "Legacy" UI theme
* Added foreign language translations to the Windows installer
* Refactored UI translation of "Gimpressionist" to "Impressionist"
* Fixed branding in the text editor color picker
* Updated `make check` to provide more verbose output for Flatpak validation
* Revamped how upstream maintainers are credited
* Displays recent upstream contributors through the UI

Overview of Changes from GNU Image Manipulation Program to Glimpse 0.1.0
========================================================================

Graphical User Interface:
* Translation files, code & build files updated so "Glimpse" is displayed
throughout the UI, executables and packages
* Changed the default UI behaviour for a cleaner/more professional look