@@ -22,19 +22,19 @@
       files. It is available for Windows and Linux.
     </_p>
   </description>
-  <url type="homepage">https://glimpse-editor.org</url>
-  <!-- url type="help">https://glimpse-editor.org/TODO</url -->
+  <url type="homepage">https://glimpse-editor.github.io</url>
+  <!-- url type="help">https://glimpse-editor.github.io/TODO</url -->
   <url type="donation">https://opencollective.com/glimpse</url>
   <url type="bugtracker">@BUG_REPORT_URL@</url>
   <update_contact>glimpse_AT_bobbymoss.com</update_contact>
 
   <screenshots>
     <screenshot type="default">
-      <image>https://glimpse-editor.org/flatpak/0.1/dark-theme1.png</image>
+      <image>https://glimpse-editor.github.io/flatpak/0.1/dark-theme1.png</image>
       <_caption>Crop and transform images in just a few clicks</_caption>
     </screenshot>
     <screenshot>
-      <image>https://glimpse-editor.org/flatpak/0.1/light-theme2.png</image>
+      <image>https://glimpse-editor.github.io/flatpak/0.1/light-theme2.png</image>
       <_caption>Apply professional filters and create animations</_caption>
     </screenshot>
   </screenshots>
@@ -49,7 +49,7 @@
 
   <releases>
     <release version="0.1.2" date="2020-03-02">
-      <url type="details">https://glimpse-editor.org/posts/glimpse-0-1-2-release-notes/</url>
+      <url type="details">https://glimpse-editor.github.io/posts/glimpse-0-1-2-release-notes/</url>
       <description>
         <_p>
           Glimpse 0.1.2 builds on our very first "minimum viable product" 
@@ -75,7 +75,7 @@
       </description>
     </release>
     <release version="0.1.0" date="2019-11-20">
-      <url type="details">https://glimpse-editor.org/posts/glimpse-0-1-0-release-notes/</url>
+      <url type="details">https://glimpse-editor.github.io/posts/glimpse-0-1-0-release-notes/</url>
       <description>
         <_p>
           After four months of intensive effort, Glimpse 0.1.0 is our very
