@@ -22,6 +22,7 @@ Overview of Changes in Glimpse 0.1.9
 * Replaced dozens of icons that previously used Wilber's face in icon packs
 * Fixed the icon pack previewer in the Preferences menu
 * Moved to new wiki site and updated links to https://github.com/glimpse-editor/Glimpse/wiki
+* Moved to new Github Pages site and updated links to https://glimpse-editor.github.io
 * TO BE DETERMINED - Still in development
 
 Overview of Changes in Glimpse 0.1.2 Release 2
